--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "litegraph.js": "file:litegraph.js",
     "react": "^17.0.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
@@ -16,6 +17,10 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "rete": "^1.4.5-rc.1",
+    "rete-connection-plugin": "^0.9.0",
+    "rete-react-render-plugin": "^0.2.1",
+    "rete-vue-render-plugin": "^0.5.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
