--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rete-connection-plugin": "^0.9.0",
     "rete-react-render-plugin": "^0.2.1",
     "rete-vue-render-plugin": "^0.5.0",
+    "rfdc": "^1.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
