--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "electron": "^10.1.5",
     "litegraph.js": "^0.7.9",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
@@ -20,12 +21,13 @@
     "react-modal": "^3.12.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "rete": "^1.4.5-rc.1",
     "rete-connection-plugin": "^0.9.0",
     "rete-react-render-plugin": "^0.2.1",
     "rete-vue-render-plugin": "^0.5.0",
     "rfdc": "^1.3.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -55,8 +57,6 @@
     ]
   },
   "devDependencies": {
-    "electron": "^10.1.5",
-    "foreman": "^3.0.1",
-    "uuid": "^8.3.2"
+    "foreman": "^3.0.1"
   }
 }
