--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "litegraph.js": "^0.7.9",
     "react": "^17.0.1",
     "react-dnd": "^11.1.3",
@@ -49,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "electron": "^10.1.5",
+    "electron": "^12.0.6",
     "foreman": "^3.0.1",
     "uuid": "^8.3.2"
   }
