--- a/src/flutterCode/config.json
+++ b/src/flutterCode/config.json
@@ -1,3 +1,1 @@
-{
-  "ProjectPathAutoSaved": "D:\\Ideal\\ideal-electron\\IdealProject"
-}
+"{\"ProjectPathAutoSaved\":[\"D:\\\\Ideal\\\\idealproject\"]}"
