--- a/src/flutterCode/config.json
+++ b/src/flutterCode/config.json
@@ -1,1 +1,1 @@
-"{\"ProjectPathAutoSaved\":[\"D:\\\\Ideal\\\\idealproject\"]}"
+{"ProjectPathAutoSaved":["D:\\Ideal\\idealproject\\idealproject\\idealproject"]}
