--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-transition-group": "^4.4.1",
     "rfdc": "^1.3.0",
     "web-vitals": "^0.2.4"
   },
