--- a/package.json
+++ b/package.json
@@ -245,31 +245,32 @@
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
+    "@svgr/webpack": "^5.5.0",
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
-    "electron-debug": "^3.1.0",
-    "electron-log": "^4.2.4",
-    "electron-updater": "^4.3.4",
-    "history": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "regenerator-runtime": "^0.13.5",
-    "source-map-support": "^0.5.19",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@sentry/electron": "^2.4.1",
     "axios": "^0.21.1",
+    "electron-debug": "^3.1.0",
+    "electron-log": "^4.2.4",
+    "electron-updater": "^4.3.4",
+    "history": "^5.0.0",
     "litegraph.js": "^0.7.9",
+    "react": "^17.0.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "^17.0.1",
     "react-loader-spinner": "^4.0.0",
     "react-map-interaction": "^2.0.0",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
+    "regenerator-runtime": "^0.13.5",
     "rfdc": "^1.3.0",
+    "source-map-support": "^0.5.19",
     "uuid": "^8.3.2"
   },
   "devEngines": {
