--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,6 @@
     "src/main.prod.js",
     "src/renderer.prod.js",
     "src/dist",
-    ".erb/dll",
-    "src/flutterCode/config.json"
+    ".erb/dll"
   ]
 }
