Add unfinished work
Former-commit-id: e65da8ad0084bcf2fc483278461a26bfcea0428e

--- a/package.json
+++ b/package.json
@@ -230,7 +230,8 @@
     "regenerator-runtime": "^0.13.5",
     "rfdc": "^1.3.0",
     "source-map-support": "^0.5.19",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "tree-kill": "latest"
   },
   "devEngines": {
     "node": ">=10.x",
